[project]
name = "cascadillo"
version = "0.0.1"
description = "Cost-aware LLM router (Milestone 0 scaffold)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "cascadillo" }]
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"
